--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="assets/styles/swiper-bundle.min.css" />
     <link href="https://fonts.cdnfonts.com/css/haghistydemo" rel="stylesheet" />
     <link rel="stylesheet" href="assets/styles/bootstrap.min.css" />
-    <script src="assets/js/config.js"></script>
+    <script src="assets/js/config.js" type="module"></script>
     <title>Ahmed Mohamed - Dev</title>
     <meta
       name="description"
@@ -993,11 +993,11 @@
       </div>
     </div>
     <!--========== MIXITUP FILTER ==========-->
-    <script src="assets/js/mixitup.min.js"></script>
+    <script src="assets/js/mixitup.min.js" type="module"></script>
     <!--========== SWIPER JS ==========-->
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/swiper-bundle.min.js"></script>
-    <script src="assets/js/app.js"></script>
-    <script src="assets/js/threeBg.js"></script>
+    <script src="assets/js/bootstrap.min.js" type="module"></script>
+    <script src="assets/js/swiper-bundle.min.js" type="module"></script>
+    <script src="assets/js/app.js" type="module"></script>
+    <script src="assets/js/threeBg.js" type="module"></script>
   </body>
 </html>
