update responsive footer

--- a/src/index.html
+++ b/src/index.html
@@ -944,20 +944,20 @@
         <div class="contact__profile">
           <div class="contact__profile-item">
             <img src="assets/images/me.jpg" alt="Ahmed Mohamed" />
-            <div class="contact_profile-col">
+            <div class="contact_profile-item-col">
               <div><strong>Ahmed Mohamed</strong></div>
               <span>Full / MERN Stack Developer</span>
             </div>
           </div>
           <div class="contact__profile-item">
-            <div class="contact_profile-col">
+            <div class="contact__profile-item-col">
               <div><span>Egypt</span></div>
               <span>Cairo</span>
             </div>
           </div>
           <div class="contact__profile-item">
             <div class="contact__profile-bg"></div>
-            <div class="contact_profile-col">
+            <div class="contact_profile-item-col">
               <span>Get in touch</span>
               <span>albashengineerahmed@gmail.com</span>
             </div>
